--- a/package.json
+++ b/package.json
@@ -11,8 +11,7 @@
   "dependencies": {
     "ejs": "^3.1.10",
     "express": "^4.21.2",
-    "nodemon": "^3.1.9",
-    "ws": "^8.18.0"
+    "nodemon": "^3.1.9"
   },
   "nodemonConfig": {
     "ext": "js,json,ejs,html,css"
