--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
   "author": "xNOTHlNGx, linvisn",
   "license": "MIT",
   "dependencies": {
+    "bootstrap": "^5.3.3",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
     "nodemon": "^3.1.9"
