--- a/.vscode/tasks.json
+++ b/.vscode/tasks.json
@@ -4,7 +4,7 @@
       {
         "label": "Sass Compile",
         "type": "shell",
-        "command": "sass --watch --style=compressed ./static/scss/custom.scss ./static/css/custom.css",
+        "command": "node-sass --watch --style=compressed ./static/scss/custom.scss ./static/css/custom.css",
         "group": "build"
       }
     ]
