--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "bootstrap": "^5.3.3",
     "ejs": "^3.1.10",
     "express": "^4.21.2",
-    "nodemon": "^3.1.9"
+    "node-sass": "^9.0.0",
+    "nodemon": "^3.1.9",
+    "sass": "^1.86.0"
   },
   "nodemonConfig": {
     "ext": "js,json,ejs,html,css"
